# ptla

./: .gitignore  LICENSE  README.md  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
docs/: SYSTEM_DESIGN.md  plugin-system-design.md
docs/modules/: ARCHITECTURE.md  BACKEND_MODULES.md  DATABASE_DESIGN.md  DATA_FLOW.md  FRONTEND_MODULES.md  SYSTEM_OVERVIEW.md  TECH_STACK.md  plugin-system-design.md
docs/modules/database/: LOG_TABLES.md  NOTIFICATION_RULE_TABLES.md  NOTIFICATION_TABLES.md  NOTIFICATION_TEMPLATE_TABLES.md  SCHEDULED_JOB_TABLES.md  SESSION_TABLES.md  SYSTEM_CONFIG_TABLES.md  TASK_CATEGORY_TABLES.md  TASK_LIST_TABLES.md  TASK_TABLES.md  USER_TABLES.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/plugin/: api.rs  lua.rs  mod.rs  runtime.rs  watcher.rs
src/components/: LanguageSelector.vue
src/i18n/: en.json  index.ts  zh-CN.json
src/layouts/: AuthLayout.vue  MainLayout.vue
src/router/: index.ts
src/stores/: auth.ts  settings.ts  tasks.ts
src/views/auth/: LoginView.vue  RegisterView.vue
src/views/dashboard/: DashboardView.vue
src/views/settings/: SettingsView.vue
src/views/tasks/: TasksView.vue
